# Marex

./: .gitignore  CMakeLists.txt  README.md  marex
Lexer/: lexer.cpp  lexer.hpp  token_.hpp
ast/: ast.hpp  ast_nodes.hpp
grammar/: grammar.ebnf  grammar.txt  lang_gramm.tab.c  lang_gramm.y
include/: ast_nodes.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token_.hpp
interpreter/: interpreter.cpp  interpreter.hpp
lang_idea/: example.md
parser/: parser.cpp  parser.hpp
src/: interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  testing.cpp
test_program/: example.md  fact.mx  fibb.mx  testing.cpp
